# Stitcher

./: .gitignore  001_rename_message_bus.py  conftest.py  content.md  metadata.json  pyproject.toml  pyrightconfig.json
.stitcher/needle/en/cli/: command.json
.stitcher/needle/en/error/: main.json
.stitcher/needle/en/generate/: main.json
migrations/: 001_phase_1_sinking.py  003_refactor_graph_to_analysis.py
scripts/: check_cycles.py  profile_stitcher.py
snapshot/: .gitignore  README.md  README.zh.md  README_PyNeedle.md  README_PyNeedle.zh.md  a.py  a.sh  b.sh  pyproject.toml
snapshot/.stitcher/needle/en/check/: main.json
snapshot/example/: 001_phase_1_sinking.py  001_unify_transaction_system.py  002_phase_2_unify_python_lang.py  004_move_bus_to_dedicated_package.py
snapshot/migrations/: 001_unify_transaction_system.py  002_phase_2_unify_python_lang.py  003_refactor_graph_to_analysis.py
snapshot/scripts/: profile_cov.py  profile_stitcher.py
snapshot/tests/integration/: test_check_command.py  test_check_conflict.py  test_check_file_tracking.py  test_check_interactive_flow.py  test_check_policy.py  test_check_signatures.py  test_check_state_machine.py  test_check_untracked.py  test_end_to_end.py  test_hydrate_command.py  test_ide_proxy.py  test_init_command.py  test_lifecycle_commands.py  test_stub_package.py  test_stub_package_namespace.py  test_stub_package_pep561.py
tests/fixtures/sample_project/: pyproject.toml
tests/fixtures/sample_project/src/app/: main.py
tests/fixtures/sample_project/src/app/utils/: helpers.py
tests/fixtures/sample_project/tests/: test_helpers.py
tests/integration/: conftest.py  test_check_command.py  test_check_file_tracking.py  test_check_interactive_flow.py  test_check_policy.py  test_check_state_machine.py  test_end_to_end.py  test_hydrate_command.py  test_ide_proxy.py  test_init_command.py  test_lifecycle_commands.py  test_multi_target_stub_names.py  test_stub_package.py  test_stub_package_namespace.py  test_stub_package_pep561.py  test_stub_package_resolution.py
