[project]
name = "stitcher-python"
version = "0.1.0"
description = "Stitching the gap between dynamic code and static analysis."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-mock",
    "ruff",
    "mypy",
    "pyneedle",
    "pyneedle-pointer",
    "pyneedle-spec",
    "stitcher-cli",
    "stitcher-application",
    "stitcher-stubgen",
    "stitcher-test-utils",
    "stitcher-refactor",
    "stitcher-index",
    "stitcher-workspace",
]

[tool.setuptools.packages.find]
exclude = ["migrations*"]

[tool.uv.workspace]
members = ["packages/*", "packages/stitcher-test-utils", "packages/stitcher-python-analysis", "packages/stitcher-index"]

[tool.uv.sources]
pyneedle = { workspace = true }
pyneedle-runtime = { workspace = true }
pyneedle-pointer = { workspace = true }
pyneedle-spec = { workspace = true }
stitcher-spec = { workspace = true }
stitcher-common = { workspace = true }
stitcher-config = { workspace = true }
stitcher-application = { workspace = true }
stitcher-python-adapter = { workspace = true }
stitcher-cli = { workspace = true }
stitcher-stubgen = { workspace = true }
stitcher-test-utils = { workspace = true }
stitcher-refactor = { workspace = true }
stitcher-index = { workspace = true }
stitcher-python-analysis = { workspace = true }
stitcher-workspace = { workspace = true }

[tool.pytest.ini_options]
addopts = "-ra --cov=stitcher --cov=needle --cov-report=term-missing"
testpaths = ["tests", "packages"]
norecursedirs = ["tests/fixtures"]
pythonpath = [
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-common/src",
    "packages/stitcher-config/src",
    "packages/stitcher-index/src",
    "packages/stitcher-python-adapter/src",
    "packages/stitcher-python-analysis/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-spec/src",
    "packages/stitcher-workspace/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-test-utils/src",
    "packages/pyneedle-pointer/src",
    "packages/pyneedle-runtime/src",
    "packages/pyneedle-spec/src",
]

[tool.stitcher.targets.stitcher]
scan_paths = [
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-common/src",
    "packages/stitcher-config/src",
    "packages/stitcher-index/src",
    "packages/stitcher-python-adapter/src",
    "packages/stitcher-python-analysis/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-spec/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-workspace/src",
    "packages/stitcher-test-utils/src",
]
stub_package = "packages/stitcher-stubs"

[tool.stitcher.targets.needle]
scan_paths = [
    "packages/pyneedle-spec/src",
    "packages/pyneedle-pointer/src",
    "packages/pyneedle-runtime/src",
]
stub_package = "packages/needle-stubs"

[tool.pyright]
include = ["packages", "tests"]
# 显式告知 IDE 所有子包的源码位置，解决 Monorepo 解析问题
extraPaths = [
    "packages/stitcher-spec/src",
    "packages/stitcher-common/src",
    "packages/stitcher-scanner/src",
    "packages/stitcher-io/src",
    "packages/stitcher-config/src",
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-test-utils/src",
    "packages/pyneedle-spec/src",
    "packages/pyneedle-pointer/src",
    "packages/pyneedle-runtime/src",
    "packages/pyneedle/src",
    "packages/stitcher-stubs/src",
    "packages/needle-stubs/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-python-analysis/src",
    "packages/stitcher-index/src",
    "packages/stitcher-workspace/src",
]
