[project]
name = "stitcher-monorepo"
version = "0.1.0"
description = "Stitching the gap between dynamic code and static analysis."
requires-python = ">=3.10"
dependencies = [
    "pyneedle == 0.1.0",
    "pyneedle-pointer == 0.1.0",
    "pyneedle-spec == 0.1.0",
    "stitcher-cli",
    "stitcher-application",
    "stitcher-stubgen",
    "stitcher-test-utils",
    "stitcher-refactor",
    "stitcher-index",
    "stitcher-workspace",
    "stitcher-lang-python",
    "stitcher-lang-sidecar",
    "stitcher-analysis",
    "stitcher-bus",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-mock",
    "ruff",
    "mypy",
    "pyneedle == 0.1.0",
    "pyneedle-pointer == 0.1.0",
    "pyneedle-spec == 0.1.0",
    "stitcher-cli",
    "stitcher-application",
    "stitcher-stubgen",
    "stitcher-test-utils",
    "stitcher-refactor",
    "stitcher-index",
    "stitcher-workspace",
    "stitcher-lang-python",
    "stitcher-lang-sidecar",
    "stitcher-analysis",
    "stitcher-bus",
]

[tool.setuptools.packages.find]
exclude = ["migrations*"]

[tool.uv.workspace]
members = [
    "packages/*",
]

[project.scripts]
stitcher = "stitcher.cli.main:app"

[tool.uv.sources]
stitcher-spec = { workspace = true }
stitcher-common = { workspace = true }
stitcher-application = { workspace = true }
stitcher-cli = { workspace = true }
stitcher-stubgen = { workspace = true }
stitcher-test-utils = { workspace = true }
stitcher-refactor = { workspace = true }
stitcher-index = { workspace = true }
stitcher-workspace = { workspace = true }
stitcher-lang-python = { workspace = true }
stitcher-lang-sidecar = { workspace = true }
stitcher-analysis = { workspace = true }
stitcher-bus = { workspace = true }

[tool.pytest.ini_options]
addopts = "-ra --cov=stitcher --cov-report=term-missing"
testpaths = ["tests", "packages"]
norecursedirs = ["tests/fixtures"]
pythonpath = [
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-common/src",
    "packages/stitcher-index/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-spec/src",
    "packages/stitcher-workspace/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-test-utils/src",
    "packages/stitcher-lang-python/src",
    "packages/stitcher-analysis/src",
    "packages/stitcher-bus/src",
]

[tool.stitcher.targets.stitcher]
scan_paths = [
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-common/src",
    "packages/stitcher-config/src",
    "packages/stitcher-index/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-spec/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-workspace/src",
    "packages/stitcher-test-utils/src",
    "packages/stitcher-lang-python/src",
    "packages/stitcher-analysis/src",
    "packages/stitcher-bus/src",
]
stub_package = "packages/stitcher-stubs"

[tool.pyright]
include = ["packages", "tests"]
extraPaths = [
    "packages/stitcher-spec/src",
    "packages/stitcher-common/src",
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-test-utils/src",
    "packages/stitcher-stubs/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-index/src",
    "packages/stitcher-workspace/src",
    "packages/stitcher-lang-python/src",
    "packages/stitcher-analysis/src",
    "packages/stitcher-bus/src",
]
