[project]
name = "stitcher-python"
version = "0.1.0"
description = "Stitching the gap between dynamic code and static analysis."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-mock",
    "ruff",
    "mypy",
    "pyneedle",
    "pyneedle-pointer",
    "pyneedle-spec",
    "stitcher-cli",
    "stitcher-application",
    "stitcher-stubgen",
    "stitcher-test-utils",
    "stitcher-refactor",
    "stitcher-index",
    "stitcher-workspace",
    "stitcher-lang-python",
    "stitcher-lang-sidecar",
    "stitcher-analysis",
    "stitcher-bus",
]

[tool.setuptools.packages.find]
exclude = ["migrations*"]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
stitcher-spec = { workspace = true }
stitcher-common = { workspace = true }
stitcher-application = { workspace = true }
stitcher-cli = { workspace = true }
stitcher-stubgen = { workspace = true }
stitcher-test-utils = { workspace = true }
stitcher-refactor = { workspace = true }
stitcher-index = { workspace = true }
stitcher-workspace = { workspace = true }
stitcher-lang-python = { workspace = true }
stitcher-lang-sidecar = { workspace = true }
stitcher-analysis = { workspace = true }
stitcher-bus = { workspace = true }
pyneedle = { path = "../Needle/packages/pyneedle", editable = true }
pyneedle-pointer = { path = "../Needle/packages/pyneedle-pointer", editable = true }
pyneedle-spec = { path = "../Needle/packages/pyneedle-spec", editable = true }
pyneedle-runtime = { path = "../Needle/packages/pyneedle-runtime", editable = true }

[tool.pytest.ini_options]
addopts = "-ra --cov=stitcher --cov-report=term-missing"
testpaths = ["tests", "packages"]
norecursedirs = ["tests/fixtures"]
pythonpath = [
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-common/src",
    "packages/stitcher-index/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-spec/src",
    "packages/stitcher-workspace/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-test-utils/src",
    "packages/stitcher-lang-python/src",
    "packages/stitcher-analysis/src",
    "packages/stitcher-bus/src",
]

[tool.stitcher.targets.stitcher]
scan_paths = [
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-common/src",
    "packages/stitcher-config/src",
    "packages/stitcher-index/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-spec/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-workspace/src",
    "packages/stitcher-test-utils/src",
    "packages/stitcher-lang-python/src",
    "packages/stitcher-analysis/src",
    "packages/stitcher-bus/src",
]
stub_package = "packages/stitcher-stubs"

[tool.pyright]
include = ["packages", "tests"]
extraPaths = [
    "packages/stitcher-spec/src",
    "packages/stitcher-common/src",
    "packages/stitcher-application/src",
    "packages/stitcher-cli/src",
    "packages/stitcher-test-utils/src",
    "packages/stitcher-stubs/src",
    "packages/stitcher-refactor/src",
    "packages/stitcher-stubgen/src",
    "packages/stitcher-index/src",
    "packages/stitcher-workspace/src",
    "packages/stitcher-lang-python/src",
    "packages/stitcher-analysis/src",
    "packages/stitcher-bus/src",
]
